trunk/tests/jastadd/negative/type_errors/L4/15_ProcPars3.ob
MODULE Factorial;
    TYPE t1 = ARRAY 10 OF INTEGER;
         t2 = ARRAY 10 OF INTEGER;
    VAR a : t1;
    
	(* OK *)
    PROCEDURE f(VAR ar : t1);
    END f;

	(* NOT OK, complex types are equal when they reference to the same object *)
    PROCEDURE g(VAR ar : t2);
    END g;
BEGIN
    f(a);
    g(a)
END Factorial.
